syntax = "proto3";
package protocols;
option go_package = "github.com/movsb/taoblog/proto";

message FormatTimeRequest {
	message Time {
		int32 unix = 1;
		string timezone = 2;
	}
	repeated Time times = 1;
	// 设备时区。
	string device = 2;
}

message FormatTimeResponse {
	message Formatted {
		string friendly = 1;
		string original = 2;
		string server = 3;
		string device = 4;
	}
	repeated Formatted formatted = 1;
}

message InstantNotifyRequest {
	string title = 1;
	string message = 2;
}

message InstantNotifyResponse {

}

message DialRemoteMessage {
	bytes data = 1;
}
